--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Server side rendering project",
   "main": "index.js",
   "scripts": {
-    "dev:build:client": "webpack --config webpack.client.js --watch",
-    "dev:server": "nodemon --watch build --exec node build/bundle.js",
-    "dev:build:server": "webpack --config webpack.server.js --watch"
+    "dev": "npm-run-all --parallel dev-*",
+    "dev-build-client": "webpack --config webpack.client.js --watch",
+    "dev-server": "nodemon --watch build --exec node build/bundle.js",
+    "dev-build-server": "webpack --config webpack.server.js --watch"
   },
   "author": "",
   "license": "ISC",
@@ -40,5 +41,17 @@
     "webpack-dev-server": "2.8.2",
     "webpack-merge": "4.1.0",
     "webpack-node-externals": "1.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "prettier": "^2.1.2"
   }
 }
